--- a/docker-geoloc-main/docker-compose.yml
+++ b/docker-geoloc-main/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       - data:/var/lib/postgresql/data
     environment:
         POSTGRES_USER: postgres
-        POSTGRES_PASSWORD: PW556655
+        POSTGRES_PASSWORD: Admin1234
         POSTGRES_DB: Geolocation_DB
     ports:
         - "0.0.0.0:5432:5432"
@@ -17,7 +17,7 @@ services:
       sh -c "python3 create_db_table.py &&
              python3 subscriber_db.py"
     environment:
-        POSTGRES_PASSWORD: PW556655
+        POSTGRES_PASSWORD: Admin1234
         POSTGRES_DB: Geolocation_DB
         POSTGRES_USER: postgres
     restart: always
@@ -28,7 +28,7 @@ services:
     command: >
       sh -c "python3 resolver.py"
     environment:
-        POSTGRES_PASSWORD: PW556655
+        POSTGRES_PASSWORD: Admin1234
         POSTGRES_DB: Geolocation_DB
         POSTGRES_USER: postgres
     restart: always
